...
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/gridViewCards"
        android:numColumns="4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonHighScore"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/gridViewCards"
        android:layout_alignEnd="@+id/gridViewCards"
        android:src="@drawable/ic_star_circle"
        android:background="@null"/>

...
