...

    <com.inqbarna.tablefixheaders.TableFixHeaders
        android:id="@+id/tableHighScore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_below="@+id/imageButtonHome"
        android:layout_above="@+id/imageButtonClose" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
...
